--- a/python-container/requirements.txt
+++ b/python-container/requirements.txt
@@ -9,6 +9,7 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+pyTelegramBotAPI==4.2.0
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
